# cqrs-es2-store

./: Cargo.toml  ChangeLog.md  README.md
examples/restful/: Cargo.toml  Makefile  README.md
examples/restful/src/bank_account/dispatchers/: logging_dispatcher.rs
examples/restful/src/bank_account/service/: bank_account_command.rs  bank_account_query.rs
examples/restful/src/bank_account/stores/: bank_account_stores.rs  mod.rs  mongodb_stores.rs  mysql_stores.rs  postgres_stores.rs  redis_stores.rs  sqlite_stores.rs
examples/restful/src/cqrs/: db.rs  mariadb_db.rs  mod.rs  mongodb_db.rs  mysql_db.rs  postgres_db.rs  redis_db.rs  sqlite_db.rs
src/: lib.rs
src/impls/memory_store/: event_store.rs  query_store.rs
src/impls/memory_store/test/: test_event_store.rs  test_query_store.rs
src/impls/mongodb_store/: event_store.rs  query_store.rs
src/impls/mongodb_store/test/: test_event_store.rs  test_query_store.rs
src/impls/redis_store/: event_store.rs  query_store.rs
src/impls/redis_store/test/: test_event_store.rs  test_query_store.rs
src/impls/sql/mysql_store/: event_store.rs  query_store.rs
src/impls/sql/mysql_store/test/: test_event_store.rs  test_query_store.rs
src/impls/sql/postgres_store/: event_store.rs  mod.rs  query_store.rs
src/impls/sql/postgres_store/test/: test_event_store.rs  test_query_store.rs
src/impls/sql/sqlite_store/: event_store.rs  query_store.rs
src/impls/sql/sqlite_store/test/: test_event_store.rs  test_query_store.rs
src/memory_store/: event_store.rs  query_store.rs
src/memory_store/test/: test_event_store.rs  test_query_store.rs
src/repository/: i_event_dispatcher.rs  i_event_store.rs  i_query_store.rs  repository.rs
src/repository/test/: dispatchers.rs  test_repository.rs
src/sql/: mod.rs
src/sql/postgres_store/: constants.rs  event_store.rs  query_store.rs
src/sql/postgres_store/test/: test_event_store.rs  test_query_store.rs
