
[package]
name = "cqrs-es2-store"
version = "0.1.0"
authors = [
  "Dave Garred <dave.garred@serverlesstechnology.com>",
  "Bassem Girgis <brgirgis@gmail.com>",
]
edition = "2018"
license = "MIT"
description = "Sync implementation of the cqrs-es2 store."
readme = "README.md"
documentation = "https://docs.rs/cqrs-es2-store"
repository = "https://github.com/brgirgis/cqrs-es2-store"
keywords = ["cqrs", "event-sourcing", "es", "DDD", "command", "query", "sync"]

[features]
default = ["with-all-sync"]
with-postgres = ["postgres"]
with-all-sync = ["with-postgres"]

[dependencies]
# logging
log = "^0.4"

# serialization
serde = { version = "^1.0.127", features = ["derive"] }
serde_json = "^1.0.66"

# CQRS framework
cqrs-es2 = { version = "0.8.0", path = "../cqrs-es2" }

# postgres driver
postgres = { version = "^0.19.1", features = [
  "with-serde_json-1",
], optional = true }

# mysql and mariadb driver
mysql = { version = "^21.0.1", optional = true }

# sqlite driver
sqlite = { version = "^0.26.0", optional = true }

[dev-dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
