[package]
name = "cqrs-restful-demo"
version = "0.7.0"
authors = [
  "Dave Garred <dave.garred@serverlesstechnology.com>",
  "Bassem Girgis <brgirgis@gmail.com>",
]
edition = "2018"

[dependencies]
# logging
log = { version = "^0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
fern = "^0.5"

# serialization
serde = { version = "^1.0.127", features = ["derive"] }
serde_json = "^1.0.66"

# CQRS framework
cqrs-es2 = { version = "0.8.0", path = "../../../cqrs-es2" }

# Sync postgres store implementation 
cqrs-es2-store = { version = "0.1.0", path = "../../", default-features = false, features = [
  "with-postgres",
] }

# postgres driver
postgres = { version = "^0.19.1", features = ["with-serde_json-1"] }

# rest API
iron = "0.6.1"
router = "*"

# other
chrono = "^0.4"
